# roundchat

./: .env.example  .gitignore  App.tsx  Cargo.toml  Dockerfile  README.md  app.json  docker-compose.yml  package-lock.json  package.json  tsconfig.json
.github/workflows/: build.yml  docker.yml  release.yml
__tests__/models/: Conversation.test.ts
__tests__/services/: CardDavService.test.ts  ConversationBuilder.test.ts  MessageParser.test.ts  WebDavService.test.ts  env.test.ts
frontend/: app.js  index.html  manifest.json  style.css
src/: config.rs  main.rs  models.rs  state.rs
src/api/: auth.rs  contacts.rs  conversations.rs  files.rs  mod.rs  sse.rs
src/components/: ContactAvatar.tsx  ConversationItem.tsx  FileItem.tsx  MessageBubble.tsx
src/config/: env.ts
src/context/: AuthContext.tsx
src/dav/: carddav.rs  mod.rs  webdav.rs
src/email/: conversation.rs  imap.rs  mail_service.rs  mod.rs  parser.rs  pop3.rs  smtp.rs
src/models/: Attachment.ts  Contact.ts  Conversation.ts  Message.ts
src/navigation/: AppNavigator.tsx
src/screens/: ChatScreen.tsx  ContactsScreen.tsx  ConversationsScreen.tsx  FilesScreen.tsx  LoginScreen.tsx
src/services/: AuthService.ts  CardDavService.ts  ConversationBuilder.ts  ImapService.ts  MailService.ts  MessageParser.ts  Pop3Service.ts  SmtpService.ts  WebDavService.ts
