[package]
name = "roundchat"
version = "0.1.0"
edition = "2021"
description = "Chat built on the universal language of the internet: email."

[[bin]]
name = "roundchat"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server
axum = { version = "0.7", features = ["macros", "multipart"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Email – IMAP (async, tokio)
async-imap = { version = "0.11", default-features = false, features = ["runtime-tokio"] }
tokio-native-tls = "0.3"

# Email – SMTP
lettre = { version = "0.11", default-features = false, features = [
    "tokio1-native-tls",
    "smtp-transport",
    "builder",
    "hostname",
] }

# Email parsing (RFC 5322)
mailparse = "0.15"

# HTTP client for CardDAV / WebDAV
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "native-tls",
    "multipart",
    "stream",
] }

# TLS for POP3 (sync)
native-tls = "0.2"

# Misc utilities
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
open = "5"
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
regex = "1"
url = "2"
urlencoding = "2"
bytes = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
